Fix recently added scection alignment

--- a/styles/base.css
+++ b/styles/base.css
@@ -83,8 +83,6 @@ a {
 
 main {
   flex-grow: 1;
-
-  max-width: 1200px;
   margin: 2rem auto;
   padding: 0 1rem;
 }
