--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -76,13 +76,26 @@
     .home-page .featured-recipes {
       margin-top: 2rem;
       width: 90vw;
+      margin: 2rem auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+        .featured-recipes > * {
+          max-width: 100%;
+          box-sizing: border-box;
+          margin: 2rem auto;
+        }
 
         .home-page .featured-recipes h2 {
           font-family: var(--heading-font);
           font-size: var(--size-header1);
           text-align: center;
           margin-bottom: 1.5rem;
+        }
+
+        element-scroller {
+          align-self: center;
         }
 
         #featured-recipes-grid {
